# reactable-py

./: .gitignore  DEVELOP.md  Makefile  README.md  index.html  listings.json  pyproject.toml  search.json  styles.css
.github/workflows/: ci.yml  docs.yml
bigblock/: __init__.py  models.py  options.py  simpleframe.py  tags.py  widgets.py
bigblock/data/: __init__.py  cars_93.csv  co2.csv  us_expenditure.csv  us_expenditures.csv  us_states.csv
bigblock/static/: reactable-py.esm.css  reactable-py.esm.js
blog/: index.html
blog/introduction/: index.html
demos/: great-tables.html  index.html  twitter-followers.html
demos/cookbook/: index.html
demos/demo_snippets/: coffee-table.html  pypi-downloads.html  solar-zenith-angles.html  twitter-followers.html
demos/pypi-downloads/: index.html
docs/: _quarto.yml  _sidebar.yml  styles.css
docs/articles/: custom-rendering.qmd
docs/blog/: index.qmd
docs/demos/: great-tables.qmd  index.qmd  twitter-followers.qmd
docs/examples/: index.qmd
docs/get-started/: code-structure.qmd  controls-click-actions.qmd  controls-filtering.qmd  controls-pagination.qmd  controls-resizing.qmd  controls-searching.qmd  controls-sorting.qmd  display-export.qmd  (+22 more)
get-started/: code-structure.html  controls-click-actions.html  controls-filtering.html  controls-pagination.html  controls-resizing.html  controls-searching.html  controls-sorting.html  display-export.html  extra-advanced-filters.html  extra-htmltools.html  format-aggregated.html  format-cell.html  format-columns.html  format-custom-rendering-js.html  format-custom-rendering.html  format-details.html  format-header-footer.html  index.html  overview.html  structure-column-groups.html  structure-details.html  structure-footers.html  structure-grouping.html  structure-headers.html  structure-rownames.html  style-conditional-js.html  style-conditional.html  style-custom-sort-indicators.html  style-table.html  style-theming.html
react_tables/: __init__.py  models.py  models_js.py  render_gt.py  simpleframe.py  tags.py  widgets.py
reactable/: __init__.py  _render_gt.py  _tbl_data.py  models.py  options.py  render_gt.py  simpleframe.py  tags.py  widgets.py
reference/: CellInfo.html  ColFormat.html  ColFormatGroupBy.html  ColGroup.html  ColInfo.html  Column.html  HeaderCellInfo.html  JS.html  Language.html  Reactable.html  RowInfo.html  Theme.html  index.html  to_widget.html
tests/: test_models.py  test_simple_frame.py  test_tbl_data.py
(+35 files in other folders)
